--- a/ensemble_trial.ipynb
+++ b/ensemble_trial.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -29,8 +13,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Reading package lists... Done\n",
             "Building dependency tree... Done\n",
@@ -407,7 +391,6 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
             "application/vnd.colab-display-data+json": {
               "pip_warning": {
@@ -417,34 +400,31 @@
               }
             }
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
         "!apt install -y ffmpeg sox libsndfile1 git\n",
         "!git clone https://github.com/cyaoc/ensemble.git\n",
-        "%cd /content/ensemble/\n",
+        "%cd ensemble\n",
         "!pip install -r requirements.txt"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!git pull\n",
-        "!python ui.py"
-      ],
+      "execution_count": 4,
       "metadata": {
-        "id": "XT-frB6qOOOB",
-        "outputId": "aa109597-3f73-4927-b9e1-9fe1a4c1c5fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XT-frB6qOOOB",
+        "outputId": "aa109597-3f73-4927-b9e1-9fe1a4c1c5fd"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Already up to date.\n",
             "2023-10-11 10:16:47.778663: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
@@ -476,7 +456,27 @@
             "^C\n"
           ]
         }
+      ],
+      "source": [
+        "!git pull\n",
+        "!python ui.py"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
